--- a/src/css/main.css
+++ b/src/css/main.css
@@ -5,6 +5,11 @@ body {
     width: 80%;
 }
 
+a {
+    color: inherit;
+    text-decoration: none;
+}
+
 nav {
     align-items: center;
     display: flex;
@@ -13,9 +18,7 @@ nav {
 }
 
 nav a {
-    color: inherit;
     font-size: 2em;
-    text-decoration: none;
 }
 
 header, footer {
