--- a/src/css/main.css
+++ b/src/css/main.css
@@ -3,6 +3,7 @@
 body {
     background-color: black;
     color: white;
+    font-family: 'Lato', sans-serif;
     margin: 0 auto;
     width: 80%;
 }
